--- a/index.html
+++ b/index.html
@@ -1,13 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Susan</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Susan Mwangi - IT Student Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Susan Mwangi</h1>
-    <script src="script.js"></script>
+  <header>
+    <nav class="navbar">
+      <div class="logo">Susan Mwangi</div>
+      <ul class="nav-links">
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section class="hero" id="hero">
+    <div class="hero-content">
+      <div class="profile-pic-container">
+        <img src="profile.png" alt="Susan Mwangi" class="profile-pic">
+      </div>
+      <h1>Hi, I'm Susan Mwangi</h1>
+      <p>IT Student | Developer | Tech Enthusiast</p>
+    </div>
+  </section>
+
+  <section class="about" id="about">
+    <div class="section-content">
+      <h2>About Me</h2>
+      <p>
+        I'm a passionate IT student with a focus on software development. I enjoy solving problems and learning new technologies. My main interest lies in building web applications, mobile apps, and exploring data science.
+      </p>
+    </div>
+  </section>
+
+  <section class="skills" id="skills">
+    <div class="section-content">
+      <h2>Skills</h2>
+      <ul class="skill-list">
+        <li class="skill">JavaScript</li>
+        <li class="skill">HTML & CSS</li>
+        <li class="skill">React.js</li>
+        <li class="skill">Node.js</li>
+        <li class="skill">Python</li>
+        <li class="skill">SQL</li>
+      </ul>
+    </div>
+  </section>
+
+  <section class="projects" id="projects">
+    <div class="section-content">
+      <h2>Projects</h2>
+      <div class="project-cards">
+        <div class="project-card">
+          <h3>Project One</h3>
+          <p>A full-stack web application to manage tasks.</p>
+        </div>
+        <div class="project-card">
+          <h3>Project Two</h3>
+          <p>A React app for tracking personal finances.</p>
+        </div>
+        <div class="project-card">
+          <h3>Project Three</h3>
+          <p>A Python script for automating data entry.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="contact" id="contact">
+    <div class="section-content">
+      <h2>Contact Me</h2>
+      <p>Email: mwangisusan795@gmail.com</p>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Susan Mwangi</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
